# lotto_system

./: .gitignore  pyproject.toml
resource/: lottery.sql
src/: crawl.py  main.py  settings.py
src/consts/: __init__.py
src/controllers/: __init__.py  crawl_controller.py  lottery_controller.py
src/databases/: db_manager.py
src/models/: __init__.py  lottery.py
src/models/enums/: __init__.py  lotto_result.py
src/repositories/: __init__.py  base_repository.py  lottery_repository.py  purchased_lottery_repository.py
src/services/: __init__.py  crawler_service.py  lottery_service.py
src/utils/: __init__.py  lottery_util.py
tests/: test_lottery_util.py
